Well Done DanHacks

--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
-<h1>JavaScript Objectball</h1>
-<p>
-  Open your Chrome dev tools to see console output and trigger the debugger to
-  catch.
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>NBA Stats Tracker</title>
+</head>
+<body>
+  <h2>NBA Stats Tracker</h2>
+  <p>Open your Chrome dev tools to see console output and debug the program.</p>
 
-<script src="./src/00-objectball.js"></script>
-<script src="./src/01-simple-debug.js"></script>
-<!-- <script src="./src/02-advanced-debug.js"></script> -->
+  <!-- Include JavaScript files -->
+  <script src="./src/00-objectball.js"></script>
+  <script src="./src/01-simple-debug.js"></script>
+  <script src="./src/02-advanced-debug.js"></script>
+</body>
+</html>
